# clipboard-history-manager

./: .gitignore  Cargo.toml  README.md
packaging/: Info.plist  generate_icon.sh  package.sh
src/: app.rs  clipboard.rs  history.rs  hotkey.rs  main.rs  tray.rs  ui.rs
