[package]
name = "clipboard-history-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
arboard = { version = "3", features = ["image-data"] }
tray-icon = "0.21.3"
winit = "0.30.13"
global-hotkey = "0.7"
egui = "0.31"
egui-winit = "0.31"
egui-wgpu = "0.31"
wgpu = "24"
pollster = "0.4"
sublime_fuzzy = "0.7"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSWindow", "NSResponder"] }
objc2-foundation = "0.3"